# CS6476-CV-Python

./: .gitignore  Contributing.md  README.md  pyproject.toml
code/: 10.Matlab_Images_Are_Matrices.py  12.Load_And_Display_Image.py  14.Inspect_Image_Values.py  16.Crop_An_Image.py
lecture_code/: 10.Matlab_Images_Are_Matrices.py  12.Load_And_Display_Image.py  16.Crop_An_Image.py  utils.py
lecture_code/2A-L1_Images_As_Functions/: 10.Matlab_Images_Are_Matrices.py  12.Load_And_Display_Image.py  14.Inspect_Image_Values.py  16.Crop_An_Image.py
lecture_code/2A-L3 Linearity and convolution/: 12.Methods.py  13.Explore_Edge_Options.py  20.Apply_a_Median_Filter.py
lecture_code/2A-L3_Linearity_And_Convolution/: 12.Methods.py
lecture_code/2A-L5-Edge-detection-Gradients/: 13.Well-Known-Gradients.py  15.Gradient-Direction-Quiz.py
