[project]
name = "cs6476"
version = "0.1.0"
description = "Dependencies for CS6476 for UV instead of conda. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy<2.0",
    "opencv-python>=4.10.0.84",
    "pyqt6>=6.8.0",
    "scipy>=1.15.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.9.0",
]
